objects/OF_AreaGeograficaJunction__c.object
<CustomObject>
    <fields>
        <fullName>OF_AreaGeografica__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area geografica</label>
        <referenceTo>OF_AreaGeograficaCustom__c</referenceTo>
        <relationshipLabel>Area Geografica</relationshipLabel>
        <relationshipName>Area_Geografica</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_Comune__c</fullName>
        <label>Comune</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Contratto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contratto Aree Geografiche</relationshipLabel>
        <relationshipName>AreaGeograficaJunction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_Provincia__c</fullName>
        <label>Provincia</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Regione__c</fullName>
        <label>Regione</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Servizio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Servizio</label>
        <referenceTo>OF_Servizio__c</referenceTo>
        <relationshipLabel>Aree Geografiche Junction</relationshipLabel>
        <relationshipName>Aree_Geografiche_Junction</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contratto Area Geografica</label>
    <nameField>
        <label>ISTAT</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aree Geografiche Junction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>